[package]
name = "qdx-receiver"
version = "0.1.0"
authors = ["Matt Gumbley <matt.gumbley@gmail.com>"]
rust-version = "1.64"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
env_logger = "0.9"
fltk = "1"
log = "0.4"
portaudio = "0.7.0"
regex = "1.9.1"
serialport = "3.3.0"

[[bin]]
name = "qdx-receiver"
path = "src/main.rs"
